2011-03-30 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFNumberFormatter.c: (CFNumberFormatterGetValueFromString)
	Fixed copy-and-paste mistake.
	* Tests/CFNumberFormatter/parse.m: Added tests.

2011-03-30 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFNumberFormatter.c: (CFNumberFormatterSetProperty)
	(CFNumberFormatterCreateNumberFromString)
	(CFNumberFormatterCreateStringWithNumber)
	(CFNumberFormatterGetValueFromString) Implemented.

2011-03-29 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFLocale.c:
	* Source/CFNumberFormatter.c: Add class functions.
	* Headers/CoreFoundation/CFBase.h: Define CFTypeRef as const.

2011-03-29 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFLocale.c: Minor fixes.
	* Source/CFNumberFormatter.c: Set default format.
	* Tests/CFNumberFormatter/create.m:
	* Tests/CFLocale/values.m:
	* Tests/CFLocale/identifier.m:
	* Tests/CFRuntime/runtime.m: Minor fixes.

2011-03-29 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFNumberFormatter.c: (CFNumberFormatterCopyProperty) Implemented.

2011-03-29 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m:
	* Source/CFNumber.m:
	* Headers/CoreFoundation/CFNumber.h: Added CFBoolean.

2011-03-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFLocale.c: (CFLocaleGetValue) Some more code.
	(CFLocaleCopyISOCurrencyCodes)
	(CFLocaleCopyCommonISOCurrencyCodes) Implemented.
	* Source/Identifiers.m: Added CFNumberFormatter identifiers.
	* Source/CFNumberFormatter.c: Return NULL from all function for now.
	* Tests/CFLocale/values.m: Worked on test a little more.

2011-03-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFNumberFormatter.c: (CFNumberFormatterSetFormat) Implemented.

2011-03-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Source/CFRuntime.m:
	* Source/CFNumberFormatter.c:
	* Headers/CoreFoundation/CFNumberFormatter.h: New type.
	* Tests/CFNumberFormatter/create.m: First couple of tests.
